--- a/client/league/view.html
+++ b/client/league/view.html
@@ -1,3 +1,6 @@
-<div>
-  League Information
-</div>
+<ul>
+  <h1>League</h1>
+  <li ng-repeat="matchup in vm.league">
+    {{matchup}}
+  </li>
+</ul>
