--- a/client/index.html
+++ b/client/index.html
@@ -18,9 +18,10 @@
 		</div>
 
 		<script src="./bower_components/angular/angular.js"></script>
+		<script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
 		<script src="app.js"></script>
-
+		<script src="services/services.js"></script>
 		<!-- Angulah scripts go here. -->
 	</body>
 </html>
