--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
 
 		<script src="app.js"></script>
 		<script src="services/services.js"></script>
+		<script type="leagues/controllers/league.list.controller.js"></script>
 		<!-- Angulah scripts go here. -->
 	</body>
 </html>
