--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,15 @@
 <html ng-app="giraffeDraft">
 	<head>
 		<meta charset="utf-8" />
-		<title> Giraffe Draft </title>
+		<title> Fantasy Shot Caller </title>
 	</head>
 	<body>
-		<h1> Giraffe Draft </title>
+		<h1> Fantasy SHOT CALLER </title>
 
 		<div ui-view>
 		</div>
 
-		<div ng-controller="apiTester">
+		<div>
 		  <form novalidate class="simple-form">
 		    Request: <input type="text" ng-model="link" /><br />
 		    <button ng-click="sendRequest()">SEND</button>
