updated bg and html

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
 	                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 	                    <i class="fa fa-bars"></i>
 	                </button>
-	                <a class="navbar-brand" href="index.html">
+	                <a class="navbar-brand" href="">
 	                    <h1>SHOT CALLER</h1>
 	                </a>
 	            </div>
@@ -40,16 +40,15 @@
 	      <ul class="nav navbar-nav">
 	        <li class="active"><a href="#intro">Home</a></li>
 	        <li><a href="#about">About</a></li>
-			<li><a href="#service">Service</a></li>
-			<li><a href="#contact">Contact</a></li>
-	        <li class="dropdown">
+			<li><a href="#team">Team</a></li>
+<!-- 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
 	          <ul class="dropdown-menu">
 	            <li><a href="#">Example menu</a></li>
 	            <li><a href="#">Example menu</a></li>
 	            <li><a href="#">Example menu</a></li>
 	          </ul>
-	        </li>
+	        </li> -->
 	      </ul>
 	            </div>
 	            <!-- /.navbar-collapse -->
@@ -58,28 +57,31 @@
 	    </nav>
 
 		<!-- Section: intro -->
-	    <section id="intro" class="intro">
-				<div ui-view>
-		</div>
+			    <section id="intro" class="intro">
+		<!-- Section: angular -->
+<!-- 				<div ui-view>
+		</div> -->
 
-		<div>
+<!-- 		<div>
 		  <form novalidate class="simple-form">
 		    Request: <input type="text" ng-model="link" /><br />
 		    <button ng-click="sendRequest()">SEND</button>
 		  </form>
-		</div>
+		</div> -->
+		<!-- /Section: angular -->
+
 			<div class="slogan">
 				<h2>WELCOME TO <span class="text_color">FANTASY SHOT CALLER</span> </h2>
 
 			</div>
 			<div class="page-scroll">
-				<a href="#service" class="btn btn-circle">
+				<a href="#about" class="btn 
+				btn-circle">
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
 	    </section>
 		<!-- /Section: intro -->
-
 		<!-- Section: about -->
 	    <section id="about" class="home-section text-center">
 			<div class="heading-about">
@@ -88,7 +90,33 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="wow bounceInDown" data-wow-delay="0.4s">
 						<div class="section-heading">
-						<h2>About us</h2>
+						<h2>About</h2>
+						<i class="fa fa-2x fa-angle-down"></i>
+
+						</div>
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+			<div class="container">
+
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-5">
+					<hr class="marginbot-50">
+				</div>
+			</div>	
+			</div>
+		</section>
+		<!-- Section: about -->
+	    <section id="team" class="home-section text-center">
+			<div class="heading-about">
+				<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="wow bounceInDown" data-wow-delay="0.4s">
+						<div class="section-heading">
+						<h2>The Team</h2>
 						<i class="fa fa-2x fa-angle-down"></i>
 
 						</div>
@@ -110,7 +138,7 @@
 	                <div class="team boxed-grey">
 	                    <div class="inner">
 							<h5>Aric Huang</h5>
-	                        <p class="subtitle">Extension</p>
+	                        <p class="subtitle">Extension Ninja</p>
 	                        <div class="avatar"><img src="img/team/1.jpg" alt="" class="img-responsive img-circle" /></div>
 	                    </div>
 	                </div>
