--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,10 @@
 					<i class="fa fa-angle-double-down animated"></i>
 				</a>
 			</div>
+			<br></br>
+			<div class="bottomSlogan">
+				<h3>We're changing the game.</h3>
+			</div>
 	    </section>
 		<!-- /Section: intro -->
 		<!-- Section: about -->
