--- a/client/index.html
+++ b/client/index.html
@@ -81,12 +81,10 @@
 				</a>
 			</div>
 			<br></br>
-			<div class="bottomSlogan">
-				<h3>We're changing the game.</h3>
-			</div>
 	    </section>
 		<!-- /Section: intro -->
-		<!-- Section: about -->
+
+	<!-- Section: about -->
 	    <section id="about" class="home-section text-center">
 			<div class="heading-about">
 				<div class="container">
@@ -95,24 +93,28 @@
 						<div class="wow bounceInDown" data-wow-delay="0.4s">
 						<div class="section-heading">
 						<h2>About</h2>
-						<i class="fa fa-2x fa-angle-down"></i>
-
 						</div>
 						</div>
 					</div>
 				</div>
 				</div>
 			</div>
-			<div class="container">
-
-			<div class="row">
-				<div class="col-lg-2 col-lg-offset-5">
-					<hr class="marginbot-50">
-				</div>
-			</div>	
-			</div>
 		</section>
+
 		<!-- Section: about -->
+	<a target="_blank" href="
+https://chrome.google.com/webstore/detail/fantasy-shot-caller/cnmplbgfbhjfemepmjimjlijljiinaeb?hl=en">
+		<video class='demoVideo' autoplay="" loop="" muted="">
+		<source type="video/mp4" src="./draftloop.mp4">
+	</video>	
+	</a>
+
+	<div class="aboutText"> We created a chrome extension for Yahoo Sports that suggests the best picks Fantasy Sports players, and visualizes your team's stats</div>
+
+	<a target="_blank" href="
+https://chrome.google.com/webstore/detail/fantasy-shot-caller/cnmplbgfbhjfemepmjimjlijljiinaeb?hl=en">
+<div class="downloadLink" >Try it here!</div>
+</a>
 	    <section id="team" class="home-section text-center">
 			<div class="heading-about">
 				<div class="container">
