--- a/client/index.html
+++ b/client/index.html
@@ -109,7 +109,7 @@ https://chrome.google.com/webstore/detail/fantasy-shot-caller/cnmplbgfbhjfemepmj
 	</video>	
 	</a>
 
-	<div class="aboutText"> We created a chrome extension for Yahoo Sports that suggests the best picks Fantasy Sports players, and visualizes your team's stats</div>
+	<div class="aboutText"> We've created a chrome extension for Yahoo Sports that suggests the best picks for Fantasy Basketball. Visualizes how your team is doing versus the opposition. Dominate your league.</div>
 
 	<a target="_blank" href="
 https://chrome.google.com/webstore/detail/fantasy-shot-caller/cnmplbgfbhjfemepmjimjlijljiinaeb?hl=en">
